--- a/src/main/resources/templates/guestbook/list.html
+++ b/src/main/resources/templates/guestbook/list.html
@@ -8,6 +8,43 @@
           <button type="button" class="btn btn-outline-primary">REGISTER</button>
         </a>
       </h1>
+      <form action="/guestbook/list" method="get" id="searchForm">
+        <div>
+          <input type="hidden" name="page" th:value="1">
+          <div class="input-group-sm">
+            <select class="form-select-sm" name="type">
+              <option th:selected="${pageRequestDTO.type == null}">------------</option>
+              <option th:selected="${pageRequestDTO.type == 't'}" value="t">제목</option>
+              <option th:selected="${pageRequestDTO.type == 'c'}" value="c">내용</option>
+              <option th:selected="${pageRequestDTO.type == 'w'}" value="w">작성자</option>
+              <option th:selected="${pageRequestDTO.type == 'tc'}" value="tc">제목 + 내용</option>
+              <option th:selected="${pageRequestDTO.type == 'tcw'}" value="tcw">제목 + 내용 + 작성자</option>
+            </select>
+          </div>
+          <input class="form-control" name="keyword" th:value="${pageRequestDTO.keyword}">
+          <div class="input-group-sm" id="button-addon4">
+            <button class="btn btn-outline-secondary btn-search">Search</button>
+            <button class="btn btn-outline-secondary btn-clear">Clear</button>
+          </div>
+        </div>
+        <script th:inline="javascript">
+          var msg = [[${msg}]]
+          console.log(msg);
+          if(msg){
+            $(".modal").modal();
+          }
+
+          var searchForm = $("#searchForm");
+
+          $('.btn-search').click(function (e){
+            searchForm.submit();
+          });
+
+          $('.btn-clear').click(function (e){
+            searchForm.empty().submit();
+          });
+        </script>
+      </form>
       <table class="table table-striped">
         <thead>
           <tr>
