--- a/src/main/resources/templates/guestbook/modify.html
+++ b/src/main/resources/templates/guestbook/modify.html
@@ -6,6 +6,8 @@
     <h1 class="mt-4">GuestBook Modify Page</h1>
     <form action="/guestbook/modify" method="post">
       <input type="hidden" name="page" th:value="${requestDTO.page}">
+      <input type="hidden" name="type" th:value="${requestDTO.type}">
+      <input type="hidden" name="keyword" th:value="${requestDTO.keyword}">
     <div class="form-group">
         <label>Gno</label>
         <input type="text" class="form-control" name="gno"  th:value="${dto.gno}" readonly>
@@ -46,12 +48,18 @@
   })
 
   $(".modifyBtn").click(function (){
-    if(!confirm("수정하시겠습니까?")){
-      return;
-    }
+    var page = $("input[name='page']")
+    var type = $("input[name='type']")
+    var keyword = $("input[name='keyword']")
+
+    actionForm.empty();
+    actionForm.append(page);
+    actionForm.append(type);
+    actionForm.append(keyword);
+
     actionForm
-            .attr("action", "/guestbook/modify")
-            .attr("method", "post")
+            .attr("action", "/guestbook/list")
+            .attr("method", "get")
             .submit();
   })
 </script>
